# bonfire

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/bonfire/: app.py  config.py  db.py  models.py  moon.py  names.py  routes.py  ws.py
static/css/: style.css
static/js/: fire.js  knights.js  main.js  powder.js  sky.js  ws.js
templates/: index.html
tests/: test_frontend.py  test_moon.py  test_names.py  test_routes.py  test_ws.py
