[project]
name = "bonfire"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "quart>=0.19",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bonfire"]
